--- a/src/frontend/src/components/_ui/HorizontalGap/horizontalgap.module.scss
+++ b/src/frontend/src/components/_ui/HorizontalGap/horizontalgap.module.scss
@@ -11,6 +11,15 @@
         justify-content: center;
     }
 
+    &.left {
+        justify-content: flex-start;
+    }
+
+
+    &.space-between {
+        justify-content: space-between;
+    }
+
     &.right {
         justify-content: flex-end;
     }
