--- a/src/frontend/src/components/_ui/button/button.module.scss
+++ b/src/frontend/src/components/_ui/button/button.module.scss
@@ -23,7 +23,8 @@
   }
 
   &:hover {
-    //background-color: var(--functional-success-bg);
+    transform: translateY(-2px);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12);
   }
 
   &.margin {
